src/objects/CventEvents__NominationCondition__c.object
<CustomObject>
    <description>Stores a single condition of the nomination filter.</description>
    <fields>
        <fullName>CventEvents__Field__c</fullName>
        <label>Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__NominationFilter__c</fullName>
        <label>Nomination Filter</label>
        <referenceTo>CventEvents__NominationFilter__c</referenceTo>
        <relationshipLabel>Nomination Conditions</relationshipLabel>
        <relationshipName>NominationConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CventEvents__Object__c</fullName>
        <label>Object</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equal than</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equal than</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
                <value>
                    <fullName>includes any</fullName>
                </value>
                <value>
                    <fullName>includes all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__Value__c</fullName>
        <description>Has been replaced by sub_Value</description>
        <label>DEPRECATED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__sub_Value__c</fullName>
        <description>Replaces Value__c field which has been deprecated.</description>
        <label>Value</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Nomination Condition</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__NominationFilter__c</columns>
        <columns>CventEvents__Object__c</columns>
        <columns>CventEvents__Field__c</columns>
        <columns>CventEvents__Operator__c</columns>
        <columns>CventEvents__Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NC-{00000000}</displayFormat>
        <label>Nomination Condition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nomination Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>